refactor: 셀럽 음성 활성화 로직 개선