@@ -2,6 +2,7 @@ package com.arizona.lipit.domain.voice.service;
 
 import com.arizona.lipit.domain.auth.entity.Member;
 import com.arizona.lipit.domain.auth.repository.MemberRepository;
+import com.arizona.lipit.domain.voice.dto.CelebVoiceResponseDto;
 import com.arizona.lipit.domain.voice.dto.SelectVoiceRequestDto;
 import com.arizona.lipit.domain.voice.dto.SelectVoiceResponseDto;
 import com.arizona.lipit.domain.voice.dto.UserVoiceResponseDto;
@@ -24,6 +25,7 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,13 +37,29 @@ public class VoiceService {
     private final VoiceMapper voiceMapper;
 
     @Transactional(readOnly = true)
-    public List<VoiceResponseDto> getCelebVoicesByMemberId(Long memberId) {
+    public List<CelebVoiceResponseDto> getCelebVoicesByMemberId(Long memberId) {
+        // 회원 확인
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.UNAUTHORIZED_USER));
 
-        List<MemberVoice> memberVoices = memberVoiceRepository.findCelebVoicesByMemberId(memberId);
+        // 셀럽 음성은 voice 테이블에서 직접 조회
+        List<Voice> celebVoices = voiceRepository.findByType(VoiceType.CELEB);
         
-        return voiceMapper.toVoiceResponseDtoList(memberVoices);
+        // 회원의 reportCount 가져오기
+        int reportCount = member.getReportCount();
+        
+        // 비즈니스 로직 및 맵핑 처리
+        return celebVoices.stream()
+                .map(voice -> {
+                    boolean activated = false;
+                    if (voice.getVoiceName().equals("스윙스")) {
+                        activated = reportCount >= 0;
+                    } else if (voice.getVoiceName().equals("셀럽 B")) {
+                        activated = reportCount >= 10;
+                    }
+                    return voiceMapper.toCelebVoiceResponseDto(voice, activated);
+                })
+                .collect(Collectors.toList());
     }
     
     @Transactional(readOnly = true)
@@ -59,9 +77,16 @@ public class VoiceService {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.UNAUTHORIZED_USER));
 
-        return memberVoiceRepository.findSelectedVoiceByMemberId(memberId)
-                .map(memberVoice -> Collections.singletonList(voiceMapper.toUserVoiceResponseDto(memberVoice)))
-                .orElse(Collections.emptyList());
+        // 선택된 음성 ID가 있는지 확인
+        if (member.getSelectedVoiceId() == null) {
+            return List.of();
+        }
+        
+        // 선택된 음성을 voice 테이블에서 직접 조회
+        Voice selectedVoice = voiceRepository.findById(member.getSelectedVoiceId())
+                .orElseThrow(() -> new CustomException(ErrorCode.RESOURCE_NOT_FOUND, "선택된 음성을 찾을 수 없습니다."));
+        
+        return List.of(voiceMapper.toUserVoiceResponseDto(selectedVoice));
     }
 
     @Transactional
@@ -70,24 +95,31 @@ public class VoiceService {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.UNAUTHORIZED_USER));
         
-        // memberVoiceId 존재 여부 확인 및 사용자의 음성인지 확인
-        MemberVoice memberVoice = memberVoiceRepository.findById(requestDto.getMemberVoiceId())
+        // voiceId로 Voice 조회
+        Long voiceId = requestDto.getVoiceId();
+        Voice selectedVoice = voiceRepository.findById(voiceId)
                 .orElseThrow(() -> new CustomException(ErrorCode.RESOURCE_NOT_FOUND, "해당 음성을 찾을 수 없습니다."));
         
-        if (!memberVoice.getMember().getMemberId().equals(memberId)) {
-            throw new CustomException(ErrorCode.UNAUTHORIZED_ACCESS, "자신의 음성만 선택할 수 있습니다.");
+        // 커스텀 음성인 경우 본인 소유 확인
+        if (selectedVoice.getType() == VoiceType.CUSTOM) {
+            boolean isOwnVoice = memberVoiceRepository.findAllVoicesByMemberId(memberId).stream()
+                .anyMatch(mv -> mv.getVoice().getVoiceId().equals(voiceId));
+            
+            if (!isOwnVoice) {
+                throw new CustomException(ErrorCode.UNAUTHORIZED_ACCESS, "자신의 음성만 선택할 수 있습니다.");
+            }
         }
         
         // 선택한 음성 ID 업데이트
-        member.setSelectedVoiceId(memberVoice.getVoice().getVoiceId());
+        member.setSelectedVoiceId(voiceId);
         memberRepository.save(member);
         
         // 응답 DTO 생성
         return SelectVoiceResponseDto.builder()
                 .memberId(memberId)
-                .selectedVoiceId(memberVoice.getVoice().getVoiceId())
-                .voiceName(memberVoice.getVoice().getVoiceName())
-                .type(memberVoice.getVoice().getType().toString())
+                .selectedVoiceId(voiceId)
+                .voiceName(selectedVoice.getVoiceName())
+                .type(selectedVoice.getType().toString())
                 .build();
     }
 
@@ -135,7 +167,6 @@ public class VoiceService {
         MemberVoice memberVoice = MemberVoice.builder()
                 .member(member)
                 .voice(savedVoice)
-                .activate(true)
                 .build();
         
         MemberVoice savedMemberVoice = memberVoiceRepository.save(memberVoice);
